# samrr

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURTY.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docker/: Dockerfile
scripts/: dev.bat  dev.sh  start.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: Cargo.toml  tauri.conf.json
src/core/src/: client.rs  core.rs  error.rs  interface.rs  library.rs  main.rs  steam.rs
src/core/src/helpers/: client.rs  interface.rs  library.rs  mod.rs  steam.rs
src/core/src/utils/: mod.rs  path.rs
src/core/src/utils/enums/: error_enum.rs  mod.rs
src/core/src/utils/helpers/: client_helper.rs  env_helper.rs  library_helper.rs  mod.rs  path_helper.rs  steam_helper.rs
src/core/src/wrappers/: i_steam_client_018.rs  mod.rs
src/ui/: index.html  main.js
