[package]
name = "samrr"
version = "0.0.1"
description = "Steam Achivement Manager Rust Rewrite"
authors = ["eoussama"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52.0"
libloading = "0.8.3"
normpath = "1.2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
